@@ -76,24 +76,12 @@ void queue_out_of_range() {
   assert(s.isQueueEmpty());
   assert(s.isQueueEmpty());
 
-  struct stepper_command_s cmd1 = {
-      .ticks = ABSOLUTE_MAX_AQE_TICKS + 1, .steps = 100, .count_up = true};
-  res = s.addQueueEntry(&cmd1);
-  test(res == AQE_TOO_HIGH, "Too high provided should trigger error");
-  assert(s.isQueueEmpty());
-
   struct stepper_command_s cmd2 = {
       .ticks = 65535, .steps = 128, .count_up = true};
 
   res = s.addQueueEntry(&cmd2);
   test(res == AQE_STEPS_ERROR, "Too high step count should trigger an error");
   assert(s.isQueueEmpty());
-
-  struct stepper_command_s cmd3 = {
-      .ticks = ABSOLUTE_MAX_AQE_TICKS, .steps = 100, .count_up = true};
-  res = s.addQueueEntry(&cmd3);
-  test(res == AQE_OK, "In range should be accepted");
-  assert(!s.isQueueEmpty());
 }
 
 void end_pos_test() {
